[package]
name = "http_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
futures = "0.3.25"
http-auth-basic = "0.3.3"
reqwest = {version="0.11.13", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
tokio = {version="1.24.1", features = ["full"]}
dotenv = "0.15.0"
